--- a/seeds/base/package.json
+++ b/seeds/base/package.json
@@ -18,7 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "7.0.0",
-    "yyl-os": "0.10.0"
+    "yyl-os": "0.10.0",
+    "yyl-replacer": "0.2.1"
   },
   "devDependencies": {
     "jest": "^24.9.0",
