--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "init-me-seed-initialize",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "init-me seed create helper",
   "main": "index.js",
   "types": "index.d.ts",
@@ -32,7 +32,8 @@
     "yyl-replacer": "0.2.1"
   },
   "devDependencies": {
+    "jest": "^24.9.0",
     "yyl-fs": "^0.3.2",
-    "jest": "^24.9.0"
+    "yyl-util": "^2.3.5"
   }
 }
