--- a/seeds/base/package.json
+++ b/seeds/base/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
+    "eslint": "eslint ./index.js",
     "test": "jest ./test"
   },
   "engines": {
@@ -23,6 +24,8 @@
     "yyl-replacer": "0.2.1"
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-plugin-node": "^10.0.0",
     "jest": "^24.9.0",
     "yyl-fs": "0.3.2",
     "yyl-util": "2.3.5"
